Update flowline routing and application logic and remove unused asset
